Reach working PoC
Remove unneeded file

Boolean join all bodies in beam CAD model

Fix meshes

Reach working PoC

--- a/package.xml
+++ b/package.xml
@@ -3,22 +3,19 @@
 <package format="3">
   <name>cartpole_01</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Cartpole ROS2</description>
   <maintainer email="walid.msi@outlook.com">walid</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT</license>
 
+  <!-- TODO: try with a fresh ROS2 Foxy install to verify deps -->
   <buildtool_depend>ament_cmake</buildtool_depend>
   <exec_depend>joint_state_publisher</exec_depend>
-  <exec_depend>joint_state_publisher_gui</exec_depend>
-  <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>rviz2</exec_depend>
   <exec_depend>xacro</exec_depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <exec_depend>ros_ign_gazebo</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>ros_ign_bridge</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
-    <gazebo_ros gazebo_model_path="${prefix}/sdf"/>
   </export>
 </package>
